@@ -54,12 +54,21 @@ def get_db_engine(alias='default'):
 def construct_checksum(level=logging.ERROR, class_name='', traceback='', message='', **kwargs):
     checksum = md5_constructor(str(level))
     checksum.update(class_name or '')
-    if traceback:
+
+    if 'data' in kwargs and kwargs['data'] and '__sentry__' in kwargs['data'] and 'frames' in kwargs['data']['__sentry__']:
+        frames = kwargs['data']['__sentry__']['frames']
+        for frame in frames:
+            checksum.update(frame['module'])
+            checksum.update(frame['function'])
+
+    elif traceback:
         traceback = '\n'.join(traceback.split('\n')[:-3])
-    message = traceback or message
-    if isinstance(message, unicode):
-        message = message.encode('utf-8', 'replace')
-    checksum.update(message)
+
+    elif message:
+        if isinstance(message, unicode):
+            message = message.encode('utf-8', 'replace')
+        checksum.update(message)
+
     return checksum.hexdigest()
 
 def varmap(func, var, context=None):
